# maxllm_gate

./: .env.example  .gitignore  Dockerfile  LICENSE  PYPI_UPLOAD.md  README.md  config.example.yaml  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
examples/: basic_usage.py  concurrent_requests.py  multi_key_config.py  priority_requests.py  simple_async.py
scripts/: benchmark.py  simulate_load.py
src/llm_scheduler/: __init__.py  config.py  main.py
src/llm_scheduler/api/: __init__.py  dependencies.py  routes.py  schemas.py
src/llm_scheduler/core/: __init__.py  dispatcher.py  queue_manager.py  scheduler.py  token_estimator.py
src/llm_scheduler/models/: __init__.py  provider.py  request.py
src/llm_scheduler/observability/: __init__.py  logging.py  metrics.py
src/llm_scheduler/rate_limiting/: __init__.py  key_manager.py  token_bucket.py  tracker.py
src/llm_scheduler/strategies/: __init__.py  base.py  fallback.py  least_utilized.py  round_robin.py  token_aware.py
src/llm_scheduler/utils/: __init__.py  retry.py  time_utils.py
src/maxllm/: __init__.py  client.py  config.py  rate_limiter.py  redis_backend.py  scheduler.py  validation.py
src/maxllm_gate/: __init__.py  client.py  config.py  rate_limiter.py  redis_backend.py  scheduler.py  validation.py
tests/: conftest.py  test_api.py  test_scheduler.py  test_sdk.py  test_strategies.py  test_token_bucket.py  test_token_estimator.py
tests/mocks/: __init__.py
